@@ -7,6 +7,7 @@ export(condformat)
 export(condformat2excel)
 export(condformat2html)
 export(condformat2latex)
+export(condformat2widget)
 export(condformatOutput)
 export(renderCondformat)
 export(rule_fill_discrete)
