@@ -38,10 +38,41 @@ condformat2html <- function(x) {
   colnames(xview) <- names(finalshow$cols)
   themes <- attr(x, "condformat")$themes
   finaltheme <- render_theme_condformat_tbl(themes, xview)
-  thetable <- do.call(htmlTable::htmlTable, c(list(format(xview),
+  thetable <- do.call(htmlTable::htmlTable, c(list(x = format(xview),
                                                    css.cell = finalformat$css_cell),
                                               finaltheme))
   return(thetable)
+}
+
+#' Converts the table to a htmlTableWidget
+#'
+#' @param x A condformat_tbl object
+#' @return the htmlTable widget
+#' @examples
+#' \dontrun{
+#' data(iris)
+#' condformat2widget(condformat(iris[1:5,]))
+#' }
+#' @export
+condformat2widget <- function(x) {
+  if (!(utils::packageVersion("htmlTable") > "1.8")) {
+    stop("htmlTable >1.8 is required for widget support")
+  }
+  finalshow <- render_show_condformat_tbl(x)
+  xfiltered <- finalshow$xfiltered
+  xview <- xfiltered[, finalshow$cols, drop = FALSE]
+  rules <- attr(x, "condformat")$rules
+  finalformat <- render_rules_condformat_tbl(rules, xfiltered, xview,
+                                             format = "html")
+  # Rename the columns according to show options:
+  colnames(xview) <- names(finalshow$cols)
+  themes <- attr(x, "condformat")$themes
+  finaltheme <- render_theme_condformat_tbl(themes, xview)
+  thewidget <- do.call(what = htmlTable::htmlTableWidget,
+                       args = c(list(x = format(xview),
+                                     css.cell = finalformat$css_cell),
+                                finaltheme))
+  return(thewidget)
 }
 
 
