@@ -100,7 +100,8 @@ rule_fill_discrete <- function(...,
 #'       }
 #'     })
 #' }
-#' condformat(head(iris)) + rule_fill_discrete_("Sepal.Length", ~ color_pick(Sepal.Length), colours = identity)
+#' condformat(head(iris)) +
+#'    rule_fill_discrete_("Sepal.Length", ~ color_pick(Sepal.Length), colours = identity)
 #'
 rule_fill_discrete_ <- function(columns,
                                 expression = ~.,
